# coopstable-contracts

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Makefile.deploy  README.md  deployed_addresses.mk  deployed_addresses.sh  for_claude.md  mainnet.contracts.json  public.contracts.json  testnet.contracts.json
.claude/: CLAUDE.md
contracts/cusd-manager/: Cargo.toml
contracts/cusd-manager/src/: asset.rs  collateral.rs  contract.rs  cusd_manager_contract.rs  events.rs  lib.rs  manager.rs  storage_types.rs
contracts/cusd_manager/: Cargo.toml
contracts/cusd_manager/src/: admin.rs  asset.rs  contract.rs  error.rs  events.rs  lib.rs  manager.rs  storage.rs  storage_types.rs  test.rs  token.rs
contracts/cusd_manager/test_snapshots/test/: test_admin_access_failure.1.json  test_admin_access_success.1.json  test_burn_cusd.1.json  test_burn_cusd_events.1.json  test_constructor.1.json  test_issue_cusd.1.json  test_issue_cusd_events.1.json  test_issue_cusd_non_admin.1.json  test_process_token_burn.1.json  test_process_token_mint.1.json  test_set_cusd_issuer.1.json  test_set_cusd_manager_admin.1.json  test_set_default_admin.1.json
contracts/cusd_token/: Cargo.toml
contracts/cusd_token/src/: contract.rs  events.rs  lib.rs  storage.rs  storage_types.rs  test.rs
contracts/cust_token/: Cargo.toml
contracts/cust_token/src/: contract.rs  lib.rs
contracts/funding-controller/: Cargo.toml
contracts/lending-adapter-controller/: Cargo.toml
contracts/lending-adapter-controller/src/: contract.rs  error.rs  lending_adapter_trait.rs  lib.rs  registry.rs  registry_storage.rs  storage_types.rs
contracts/lending-pool-adapters/: Cargo.toml
contracts/lending-pool-adapters/src/: contract.rs  lib.rs  registry.rs
contracts/lending_yield_controller/: Cargo.toml
contracts/lending_yield_controller/src/: constants.rs  contract.rs  controls.rs  error.rs  events.rs  lib.rs  storage.rs  storage_types.rs  test.rs
contracts/yield-adapter-registry/: Cargo.toml
contracts/yield_adapter_registry/: Cargo.toml
contracts/yield_adapter_registry/src/: admin.rs  contract.rs  error.rs  events.rs  lib.rs  storage.rs  storage_types.rs  test.rs
contracts/yield_adapter_registry/test_snapshots/test/: test_add_support_for_asset.1.json  test_add_support_for_asset_unauthorized.1.json  test_constructor.1.json  test_get_non_existent_adapter.1.json  test_is_supported_asset.1.json  test_register_adapter.1.json  test_register_adapter_unauthorized.1.json  test_remove_adapter.1.json  test_remove_adapter_unauthorized.1.json  test_remove_support_for_asset.1.json  test_remove_support_for_asset_unauthorized.1.json  test_set_yield_adapter_admin.1.json
contracts/yield_controller/: Cargo.toml
contracts/yield_controller/src/: constants.rs  lib.rs
contracts/yield_distributor/: Cargo.toml  Makefile
contracts/yield_distributor/src/: contract.rs  error.rs  events.rs  lib.rs  storage.rs  storage_types.rs  test.rs
contracts/yield_distributor/test_snapshots/test/: test_configuration_updates.1.json  test_constructor.1.json  test_distribute_unauthorized.1.json  test_distribution_after_member_removal.1.json  test_distribution_no_members.1.json  test_distribution_timing.1.json  test_member_management.1.json  test_sequential_distributions.1.json  test_yield_distribution.1.json
deployments/: local.json  testnet.json
docs/: architecture.md  upgradeability.md
examples/: claim_yield.ts  deposit_collateral.ts  query_yield.ts  withdraw_collateral.ts
scripts/: generate_bindings.sh
ts/blend_capital_adapter/: package.json
ts/blend_capital_adapter/src/: index.ts
ts/cusd-manager/: README.md  package.json
ts/cusd-manager/src/: index.ts
ts/cusd_manager/src/: index.ts
ts/lending_yield_controller/: package.json
ts/lending_yield_controller/src/: index.ts
ts/yield_adapter_registry/: package.json
ts/yield_adapter_registry/src/: index.ts
ts/yield_distributor/: package.json
ts/yield_distributor/src/: index.ts
