[workspace]
members = [
  "contracts/*",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BreadchainCoop/Coop-Stable-Contracts"

[workspace.dependencies]
soroban-sdk = "22.0.7"
test-case = "3.3.1"
pretty_assertions = "1.4.1"
soroban-token-sdk = "22.0.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
