[workspace]
members = [ "contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BreadchainCoop/Coop-Stable-Contracts"

[workspace.dependencies]
soroban-sdk = "22.0.7"
soroban-token-sdk = "22.0.7"
test-case = "3.3.1"
pretty_assertions = "1.4.1"
stellar-fungible = { workspace=true, git = "https://github.com/OpenZeppelin/stellar-contracts", tag="v0.2.0" }
stellar-pausable = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag="v0.2.0" }
blend_capital_adapter = { workspace= true, path = "./packages/blend_capital_adapter" }
yield_adapter = { workspace= true, path = "./packages/yield_adapter" }
access_control = { workspace= true, path = "./packages/access_control" }
yield_adapter_registry = { workspace= true, path = "./contracts/yield_adapter_registry" }
cusd_manager = { workspace= true, path = "./contracts/cusd_manager" }
yield_distributor = { workspace = true, path = "./contracts/yield_distributor" }
lending_yield_controller = { workspace = true, path = "./contracts/lending_yield_controller" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
