[package]
name = "cusd_manager"
description = "Coopstable cUSD manager contract"
version = {workspace = true}
edition = {workspace = true}

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
soroban-sdk = { workspace = true, features = ["testutils"] }
test-case = {workspace = true}
