[package]
name = "yield_adapter_registry"
version = "0.0.0"
edition = { workspace = true }
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
yield_adapter = { workspace = true}
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
