[package]
name = "yield_adapter_registry"
version = "0.0.0"
edition = { workspace = true }
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
yield_adapter = { workspace = true}
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
pretty_assertions = { workspace = true }